[package]
name = "Rust-wasm"
version = "0.1.0"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
edition = '2018'
repository = "https://github.com/akeboshi1/PhaserRust"
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib"]
path = "./src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.64"
wasm-bindgen-futures = "0.4.7"
js-sys = "0.3.36"
rand = "0.7.0"
cfg-if = "0.1.2"
image = { version = "0.21.0", default-features = false, features = ["jpeg"] }
console_error_panic_hook = "0.1.6"
futures = { version = "0.3"}

[dependencies.web-sys]
version = "^0.3.59"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "DedicatedWorkerGlobalScope",
  "WebSocket",
  "console",
  "XmlHttpRequest",
  "XmlHttpRequestUpload",
  "XmlHttpRequestResponseType",
  "XmlHttpRequestEventTarget",
  "EventListener",
  "AudioContext",
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  "FormData",
  "BlobPropertyBag"
]
