[package]
name = "Rust-wasm"
version = "0.1.0"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
edition = '2018'
repository = "https://github.com/akeboshi1/PhaserRust"
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib"]
path = "./src/lib.rs"

[dependencies]
wasm-bindgen = {version ="0.2.64",features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.7"
js-sys = "0.3.36"
rand = "0.7.0"
prost = "0.11.0"
which     = "4.0"
anyhow    = "1.0.53"
protobuf = "^3.1.0"
protobuf-parse = "^3.1.0"
tempfile = "3"
[dependencies.web-sys]
version = "^0.3.59"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "DedicatedWorkerGlobalScope",
  "WebSocket",
  "console",
  "XmlHttpRequest",
  "XmlHttpRequestUpload",
  "XmlHttpRequestResponseType",
  "XmlHttpRequestEventTarget",
  "EventListener",
  "AudioContext",
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  "FormData",
  "BlobPropertyBag"
]
