[package]
name = "other"
version = "0.1.0"
edition = "2018"
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "./src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.64"
wasm-bindgen-futures = "0.4.7"
js-sys = "0.3.36"
console_error_panic_hook = "0.1.6"
futures = { version = "0.3"}

[dependencies.web-sys]
version = "^0.3.59"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "DedicatedWorkerGlobalScope",
  "WebSocket",
  "console",
  "XmlHttpRequest",
  "XmlHttpRequestUpload",
  "XmlHttpRequestResponseType",
  "XmlHttpRequestEventTarget",
  "EventListener",
  "AudioContext",
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  "FormData",
  "BlobPropertyBag"
]