[package]
name = "proto-gxm"
version = "0.1.0"
edition = "2021"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/akeboshi1/PhaserRust"
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies]
protobuf = "3.1.0"
prost = "0.11.0"

[build-dependencies]
protobuf-codegen = "3.1.0"
prost-build = "0.11.1"
